--- a/css/styles.css
+++ b/css/styles.css
@@ -985,7 +985,7 @@ main {
 .publications-section {
     background-color: var(--off-white);
     position: relative;
-    padding: var(--spacing-xl) 0;
+    padding: var(--spacing-sm) 0;
 }
 
 .publications-filter {
@@ -1124,6 +1124,11 @@ main {
 }
 
 .view-more-container {
+    text-align: center;
+    margin-top: var(--spacing-xl);
+}
+
+.view-resume-container {
     text-align: center;
     margin-top: var(--spacing-xl);
 }
@@ -1893,7 +1898,10 @@ main {
     flex: 1;
     background-color: var(--white);
     border-radius: var(--border-radius-md);
-    padding: var(--spacing-xl);
+    padding-top: var(--spacing-xl);
+    padding-left: var(--spacing-xl);
+    padding-right: var(--spacing-xl);
+    padding-bottom: var(--spacing-lg);
     margin-left: var(--spacing-xl);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
     border-left: 4px solid var(--burnt-orange);
@@ -1982,7 +1990,7 @@ main {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: var(--spacing-lg);
-    margin-top: var(--spacing-xxl); /* Increased margin to create more separation */
+    margin-bottom: var(--spacing-lg); /* Increased margin to create more separation */
     position: relative; /* Ensure proper positioning context */
     z-index: 1; /* Ensure markers appear above timeline line */
 }
